WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260352
[GTK4] Toplevel window state change is not handled properly
https://bugs.webkit.org/show_bug.cgi?id=260352
Summary
[GTK4] Toplevel window state change is not handled properly
Carlos Garcia Campos
Reported
2023-08-17 09:38:23 PDT
We monitor the toplevel window state to detect when the window is minimized to set the web pages as not visible and pause the rendering. In GTK3 we already get a change mask, so we do nothing if iconized state hasn't changed. In GTK4 we get the new state, but we don't know what changed, so we are actually changing the visibility of pages for any state change. We need to handle the changed mask manually.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-08-17 09:44:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16792
EWS
Comment 2
2023-08-17 23:01:55 PDT
Committed
267032@main
(989de9dbc7ac): <
https://commits.webkit.org/267032@main
> Reviewed commits have been landed. Closing PR #16792 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug